# DPDK-AI-Engine

./: .gitignore  README.md
docs/: Anomalies.md  DPDK_concepts.md  DPDK_optimizations.md  DPDK_stories.md  DPDK_structures.md  Fragmentation_Optimizations.md  Performance.md  REFERENCES.md  ROADMAP.md  Stock_Market.md  TODO.md  USAGE.md  VISION.md
docs/testing/filter/: TEST_REPORT.md
docs/testing/frag_reass/: TEST_REPORT.md
docs/testing/proto_parser/: TEST_REPORT.md
docs/testing/talkers/: TEST_REPORT.md
docs/testing/tcp_reassembly/: TEST_REPORT.md
examples/dpdk-hello/: DPDK_notes.txt  main.c  meson.build
examples/port-info/: main.c  meson.build
pkt-sniffer/: capture.h  capture_afp.c  capture_common.c  capture_dpdk.c  capture_pcap.c  cli.c  cli.h  debug.c  debug.h  filter.c  filter.h  flows.c  flows.h  frag_ipv4.c  frag_ipv4.h  frag_ipv6.c  main.c  meson.build  meson_options.txt  parse_arp.c  parse_arp.h  parse_dhcp.c  parse_dhcp.h  parse_dns.c  parse_dns.h  parse_eth.c  parse_eth.h  parse_http.c  parse_http.h  parse_ipv4.c  parse_ipv4.h  parse_ipv6.c  parse_ipv6.h  parse_l4.c  parse_l4.h  parse_tls.c  parse_tls.h  parse_tls_cert.c  parse_tunnel.c  parse_tunnel.h  (+20 more)
pkt-sniffer/anomaly/: anomaly.c  anomaly.h  fno_data.c  futures_options.c  futures_options.h
pkt-sniffer/anomaly/rule_based/: burst_detection.c  inter_arrival.c  protocol_coverage.c
pkt-sniffer/engine/: capture.h  capture_afp.c  capture_dpdk.c  capture_pcap.c
pkt-sniffer/engine/time/: time_afp.c  time_dpdk.c  time_pcap.c
pkt-sniffer/parsers/: frag_ipv4.c  frag_ipv4.h  frag_ipv6.c  parse_arp.c  parse_arp.h  parse_dhcp.c  parse_dhcp.h  parse_dns.c  parse_dns.h  parse_eth.c  parse_eth.h  parse_http.c  parse_http.h  parse_ipv4.c  parse_ipv4.h  parse_ipv6.c  parse_ipv6.h  parse_l4.c  parse_l4.h  parse_tls.c  parse_tls.h  parse_tls_cert.c  parse_tls_cert.h  parse_tunnel.c  parse_tunnel.h  tcp_reass.c  tcp_reass.h
pkt-sniffer/parsers/market/: gen_fix.c  gen_itch.c  gen_main.c  gen_main.h  gen_sbe.c  parse_data.c  parse_data.h  parse_fix.c  parse_itch.c  parse_sbe.c
pkt-sniffer/stats/: stats.c  stats.h  stats_json.c
pkt-sniffer/tests/: dhcp_test.py  frag6_test.py  frag_generate_scapy.py  frag_min_repro.py  frag_reassembly_test_harness.py  gen_dhcp.py  ipv6_frag_reass.py  scapy_frag_test.py
pkt-sniffer/utils/: debug.c  debug.h  filter.c  filter.h  flows.c  pcap_writer.c  pcap_writer.h  sanitize.py  sniffer_signal.c  sniffer_signal.h  talkers.c  talkers.h  utils.c  utils.h
web/: index.html
